# openapi.yaml
@@ -56,12 +56,13 @@ paths:
             schema:
               type: object
               properties:
-                username:
-                  type: string
                 password:
                   type: string
+                remember_me:
+                  type: boolean
+                csrf_token:
+                  type: string
               required:
-                - username
                 - password
       responses:
         '200':
